* Version (not released, yet)
 - m-kress:
 -- do not substitute trailing control characters of a log line, but eliminate them completelly

* Version 20230707
 - m-kress:
 -- add missing brackets to harmonize code
 - auouymous:
 -- fix behavior of (program_)?regex and (program_)?neg_regex conditions
 - LonEox78:
 -- pointer to directory name was not initialized, so eventually weird directories were created
 - orbea:
 -- replace RETSIGTYPE with void
 -- silence obsolete warnings

* Version 20220214
 - jovanlanik:
 -- port to pcre2
 -- doku has been updated, removed a lot of inconsistencies
 -- add an option to change group
 -- add permissions to configuration
 -- remove unused errptr

* Version 20200113
 - avoid writing logs to STDOUT twice
 - add line feed to sent UDP log entries
 - rkonrad:
 -- add support for nanoseconds in time stamp

* Version 20181125
 - closed memory leaks for remote syslog

* Version 2018510
 - orbea:
 -- clean up automake files

* Version 20180327
 - minor fix in man page

* Version 20180326
 - moved to GitHub hvisage/metalog
 - Michael Kress:
 -- add remote logging to a log server via UDP
 -- silences a minor compiler warning (unused return value) and a missing cast
 -- add the special value "NONE" as parameter for the keyword "logdir". A log entry with "NONE will not be written to a log file.

* Version 3
 - fix interaction between "postrotate_cmd" and "logdir" (by Matt Whitlock
   #2887065)
 - switch to pkg-config for pcre look up
 - update bundled gnulib code

* Version 2
 - fix long standing typo where the minute field in the rotated log was
   replaced with the current month: %m instead of %M (by dorian33 #3027782)
 - add support for rate limiting of messages with the new "ratelimit" and
   "ratelimit_burst" keywords (by Martin von Gagern #2777251)
 - standardize warning/error output

* Version 1
 - switch over to using daemon() by default
 - fix stupid semicolon typo causing breaks on all lines (Gentoo Bug #258830)